welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: not found: value ecritMessafe
		ecritMessafe(cpt)
                ^