welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {

def fonctionTest():Boolean = {
	(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)
}

var i = 0
var j = 0
var cpt = 0

while (!fonctionTest) {
	if (j%0 == 0) {
		setPos(i,j)
		ecritMessage(cpt)
		cpt += 1
		i += 1
		if (i == getMondeLargeur) {
			j += 1
			i = 0
		}
	} else {
		i = getMondeLargeur()
		setPos(i,j)
		ecritMessafe(cpt)
		cpt += 1	
		i -= 1
	}
}

}
